# pixelops

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  example_agents.py  pyproject.toml
.claude/agents/: backend-architect.md  frontend-dev.md  integration-tester.md  pixel-engine-dev.md
.claude/commands/: build-backend.md  build-engine.md  build-frontend.md  integrate.md  plan.md
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/graph/: __init__.py  executor.py  layout_generator.py  registry.py
backend/app/models/: schemas.py
backend/graphs/: __init__.py  multi_agent_team.py  research_agent.py  simple_chat.py
backend/tests/: conftest.py  test_graph_registry.py  test_layout_generator.py  test_sse_streaming.py
docs/: tasks.md  test-results.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts
frontend/src/__tests__/: graphStore.test.ts
frontend/src/components/: ControlPanel.tsx  GraphSelector.tsx  NodeStatusBar.tsx  PixelCanvas.tsx
frontend/src/engine/: Camera.ts  Character.ts  EdgeEffect.ts  GameLoop.ts  GraphEdgeRenderer.ts  HandoffEffect.ts  ParticleSystem.ts  Pathfinding.ts  Renderer.ts  SpeechBubble.ts  TileMap.ts  constants.ts  index.ts
frontend/src/hooks/: useDarkMode.ts  useEngineSync.ts  useGraphList.ts  useGraphObserve.ts  useGraphStream.ts
pixelops/: __init__.py  _event_bus.py  _executor.py  _layout.py  _observer.py  _registry.py  _routes.py  _schemas.py  _server.py
pixelops/static/: index.html
(+11 files in other folders)
